tdf#56580 Fix negative error bars on log chart

This is a bug in the rendering of negative error bars on log charts,
when the error bar size is greater than the chart value. This is
numerically invalid, since it leads to taking the logarithm of a
non-positive value.
- Add a test for this condition, and turn off the negative error bar
  when the condition is met.

Change-Id: If84823c27d68976d3515581b1f913d78d683f446
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/135106
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Tested-by: Mike Kaganski <mike.kaganski@collabora.com>